# ascendc-complex-gram

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  baremix_custom.cpp  baremix_custom_tiling.cpp  build.sh  complex_gram_fused_kernel.cpp  complex_gram_kernel.cpp  complex_gram_msopgen.json  data_utils.h  main.cpp  run.sh  test_complex_gram_golden.py  test_tiling_plan.py
acl_test/: CMakeLists.txt  main.cpp
caller/: CMakeLists.txt  exec.py  main.cpp  run.sh
cmake/: npu_lib.cmake
docs/: REAL_ASCEND_TODO.md  ascendc_api_formula_analysis.md
framework/: CMakeLists.txt
framework/tf_plugin/: CMakeLists.txt
include/: complex_gram_fused_tiling.h
op_host/: CMakeLists.txt  complex_gram.cpp  complex_gram_tiling.cpp
op_kernel/: CMakeLists.txt  complex_gram.cpp  complex_gram_fused.cpp  complex_gram_reduce_kernel.cpp  complex_gram_single_kernel.cpp  complex_gram_tiling.h
op_proto/: complex_gram.cpp
python/: gen_data.py  verify.py
scripts/: README.md  build_ascend.sh  gen_data.py  run_ascend.sh  run_ascend_sample.sh  run_cpu_golden.sh  run_local_checks.sh  verify_data.py  verify_result.py
src/: complex_gram_fused_kernel.cpp  complex_gram_fused_tiling.cpp
